kubernetes/clusters/k0s/apps/kube-system/cilium/network-policies/allow-egress-internet.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-internet
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/internet: allow
  egress:
    - toCIDRSet:
        - cidr: "0.0.0.0/0"
          except:
            - "10.0.0.0/8"
            - "172.16.0.0/12"
            - "192.168.0.0/16"
