kubernetes/clusters/k0s/apps/kube-system/cilium/network-policies/allow-egress-restic.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-restic
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/minio: allow
  egress:
    # TODO: Figure out why this one doesn't work
    - toFQDNs:
        - matchName: restic.feelingsmachine.com
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 192.168.8.242/32
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
