kubernetes/clusters/k0s/apps/kube-system/cilium/network-policies/allow-ingress-minio.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-minio
spec:
  description: "Allow pods that require ingress to minio"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/minio: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: minio
            app.kubernetes.io/instance: minio
            io.kubernetes.pod.namespace: storage
      authentication:
        mode: required
