kubernetes/clusters/k0s/apps/kube-system/cilium/network-policies/default-allow-kubedns.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-allow-kubedns-egress
spec:
  description: "Policy for egress allow from all Cilium managed endpoints in the cluster to kube-dns"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: "TCP"
            - port: "53"
              protocol: "UDP"
